--- a/Index.html
+++ b/Index.html
@@ -508,28 +508,39 @@
             { date: '1/15/2026', category: 'Material', project: '04 - 35 Jefferson Rd, Brookline, MA', amount: 1056.66, description: 'Striping and stair framing materials', trade: '51 - Framing' },
             { date: '1/15/2026', category: 'Rental', project: '01 - 121 Prospect Street, Somerville, MA', amount: 4.85, description: 'Uhaul toll fee', trade: '90 - Services' },
             { date: '1/16/2026', category: 'Material', project: '04 - 35 Jefferson Rd, Brookline, MA', amount: 278.67, description: 'Floor joist materials', trade: '51 - Framing' },
-            { date: '1/20/2026', category: 'Material', project: '01 - 121 Prospect Street, Somerville, MA', amount: 447.21, description: 'Door lock sets', trade: '70 - Interior Finish' },
-            { date: '1/20/2026', category: 'Material', project: '01 - 121 Prospect Street, Somerville, MA', amount: 230.07, description: 'Door lock sets', trade: '70 - Interior Finish' },
+            { date: '1/20/2026', category: 'Material', project: '01 - 121 Prospect Street, Somerville, MA', amount: 447.21, description: 'Door lock sets(Amazon)', trade: '70 - Interior Finish' },
+            { date: '1/20/2026', category: 'Material', project: '01 - 121 Prospect Street, Somerville, MA', amount: 230.07, description: 'Door lock sets(Amazon)', trade: '70 - Interior Finish' },
             { date: '1/20/2026', category: 'Material', project: '04 - 35 Jefferson Rd, Brookline, MA', amount: 65.55, description: 'Disel Fuel for Heating', trade: '91 - Others' },
             { date: '1/20/2026', category: 'Other', project: '00 - Indirect (Overhead)', amount: 15.00, description: 'Wire transfer fee', trade: '90 - Services' },
             { date: '1/21/2026', category: 'Material', project: '01 - 121 Prospect Street, Somerville, MA', amount: 31.85, description: 'plastic painter cover', trade: '70 - Interior Finish' },
             { date: '1/21/2026', category: 'Labor Cost', project: '04 - 35 Jefferson Rd, Brookline, MA', amount: 1000.00, description: '老李工钱(取现金)', trade: '90 - Services' },
             { date: '1/21/2026', category: 'Material', project: '04 - 35 Jefferson Rd, Brookline, MA', amount: 494.33, description: 'Lumber for framing', trade: '51 - Framing' },
-            { date: '1/21/2026', category: 'Material', project: '01 - 121 Prospect Street, Somerville, MA', amount: 1659.47, description: 'Door lock sets', trade: '70 - Interior Finish' },
+            { date: '1/21/2026', category: 'Material', project: '01 - 121 Prospect Street, Somerville, MA', amount: 1659.47, description: 'Door lock sets(Amazon)', trade: '70 - Interior Finish' },
             { date: '1/21/2026', category: 'Material', project: '01 - 121 Prospect Street, Somerville, MA', amount: 1800.30, description: '24in Vanity x4', trade: '70 - Interior Finish' },
-            { date: '1/21/2026', category: 'Material', project: '01 - 121 Prospect Street, Somerville, MA', amount: 1111.41, description: 'Door lock sets', trade: '70 - Interior Finish' },
+            { date: '1/21/2026', category: 'Material', project: '01 - 121 Prospect Street, Somerville, MA', amount: 1111.41, description: 'Door lock sets(Amazon)', trade: '70 - Interior Finish' },
             { date: '1/22/2026', category: 'Sub-contractor', project: '04 - 35 Jefferson Rd, Brookline, MA', amount: 4000.00, description: 'Framing second payment', trade: '51 - Framing' },
             { date: '1/22/2026', category: 'Labor Cost', project: '04 - 35 Jefferson Rd, Brookline, MA', amount: 1000.00, description: '老李工钱(取现金)', trade: '90 - Services' },
             { date: '1/22/2026', category: 'Material', project: '04 - 35 Jefferson Rd, Brookline, MA', amount: 171.49, description: 'Lumber for framing', trade: '51 - Framing' },
             { date: '1/22/2026', category: 'Material', project: '03 - 25 Temple Street, Somerville, MA', amount: 162.33, description: 'Package materilas', trade: '91 - Others' },
-            { date: '1/22/2026', category: 'Material', project: '01 - 121 Prospect Street, Somerville, MA', amount: 1507.95, description: 'Bathtub sticks', trade: '70 - Interior Finish' },
+            { date: '1/22/2026', category: 'Material', project: '01 - 121 Prospect Street, Somerville, MA', amount: 1507.95, description: 'Bathtub sticks(Amazon)', trade: '70 - Interior Finish' },
             { date: '1/22/2026', category: 'Other', project: '04 - 35 Jefferson Rd, Brookline, MA', amount: 960.00, description: 'Dumpster', trade: '91 - Others' },
             { date: '1/22/2026', category: 'Material', project: '04 - 35 Jefferson Rd, Brookline, MA', amount: 580.66, description: 'Lumber for framing', trade: '51 - Framing' },
             { date: '1/22/2026', category: 'Other', project: '00 - Indirect (Overhead)', amount: 15.00, description: 'Wire transfer fee', trade: '90 - Services' },
             { date: '1/23/2026', category: 'Material', project: '01 - 121 Prospect Street, Somerville, MA', amount: 1202.24, description: '3rd floor missing or replaced door', trade: '74 - Finishing Carpentry' },
             { date: '1/23/2026', category: 'Material', project: '01 - 121 Prospect Street, Somerville, MA', amount: 3.00, description: '3rd floor missing or replaced door', trade: '74 - Finishing Carpentry' },
-            { date: '1/23/2026', category: 'Material', project: '01 - 121 Prospect Street, Somerville, MA', amount: 8932.95, description: '2nd floor doors', trade: '70 - Interior Finish' },
-            { date: '1/25/2026', category: 'Material', project: '01 - 121 Prospect Street, Somerville, MA', amount: 354.15, description: '2 kitchen sinks', trade: '91 - Others' }
+            { date: '1/23/2026', category: 'Material', project: '01 - 121 Prospect Street, Somerville, MA', amount: 8932.95, description: '2nd floor louver doors', trade: '70 - Interior Finish' },
+            { date: '1/25/2026', category: 'Material', project: '01 - 121 Prospect Street, Somerville, MA', amount: 354.15, description: '2 kitchen sinks', trade: '91 - Others' },
+            { date: '1/27/2026', category: 'Material', project: '01 - 121 Prospect Street, Somerville, MA', amount: 11925.08, description: '2nd floor doors', trade: '70 - Interior Finish' },
+            { date: '1/27/2026', category: 'Rental', project: '04 - 35 Jefferson Rd, Brookline, MA', amount: 200.00, description: 'Porta potty rental', trade: '90 - Services' },
+            { date: '1/27/2026', category: 'Other', project: '00 - Indirect (Overhead)', amount: 15.00, description: 'wire transfer fee', trade: '90 - Services' },
+            { date: '1/28/2026', category: 'Material', project: '01 - 121 Prospect Street, Somerville, MA', amount: 450.40, description: 'Wall sconces(Amazon)', trade: '70 - Interior Finish' },
+            { date: '1/28/2026', category: 'Sub-contractor', project: '01 - 121 Prospect Street, Somerville, MA', amount: 2100.00, description: 'Condo Site Plan Final Payment', trade: '90 - Services' },
+            { date: '1/29/2026', category: 'Sub-contractor', project: '04 - 35 Jefferson Rd, Brookline, MA', amount: 1675.00, description: 'Concrete cut and build final payment', trade: '07 - Masonry Block' },
+            { date: '1/29/2026', category: 'Sub-contractor', project: '04 - 35 Jefferson Rd, Brookline, MA', amount: 13000.00, description: 'Plumbing Deposit', trade: '30 - Plumbing' },
+            { date: '1/29/2026', category: 'Sub-contractor', project: '04 - 35 Jefferson Rd, Brookline, MA', amount: 10000.00, description: 'Electrical Deposit', trade: '20 - Electrical' },
+            { date: '1/30/2026', category: 'Material', project: '01 - 121 Prospect Street, Somerville, MA', amount: 65.54, description: '', trade: '91 - Others' },
+            { date: '1/30/2026', category: 'Material', project: '01 - 121 Prospect Street, Somerville, MA', amount: 262.53, description: '', trade: '91 - Others' },
+            { date: '1/30/2026', category: 'Material', project: '04 - 35 Jefferson Rd, Brookline, MA', amount: 888.04, description: 'Steel L shape beam', trade: '51 - Framing' }
         ];
 
         // 工具函数
